<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingActivity"
    android:padding="8dp"
    android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/usernameProfileContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/usernameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_edit_gray_24dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:textSize="20sp" />
    </LinearLayout>

    <include layout="@layout/layout_list_separator"
        app:layout_constraintTop_toBottomOf="@id/usernameProfileContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_marginRight="-8dp"/>

    <TextView
        android:id="@+id/emergencyContactListProfileLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_contact_list"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/usernameProfileContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/emergencyContactListProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/emergencyContactListProfileLabel">
    </LinearLayout>

    <Button
        android:id="@+id/addMoreEmergencyContactsProfile"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle_black_24dp"
        android:text="@string/add_emergency_contact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emergencyContactListProfile" />

    <include layout="@layout/layout_list_separator"
        app:layout_constraintTop_toBottomOf="@id/addMoreEmergencyContactsProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_marginRight="-8dp"/>

    <TextView
        android:id="@+id/accelerationThresholdSettingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceleration_threshold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/addMoreEmergencyContactsProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/accelerationThresholdSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/accelerationThresholdSettingLabel"
        app:layout_constraintTop_toBottomOf="@id/addMoreEmergencyContactsProfile"
        android:text="@string/_9_8g"
        android:layout_marginTop="8dp"/>

    <SeekBar
        android:id="@+id/accelerationSeekBarSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/accelerationThresholdSetting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:max="78"/>

    <include layout="@layout/layout_list_separator"
        app:layout_constraintTop_toBottomOf="@id/accelerationSeekBarSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_marginRight="-8dp"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/soundSwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accelerationSeekBarSetting"
        android:text="@string/sound_on_collision"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

    <include layout="@layout/layout_list_separator"
        app:layout_constraintTop_toBottomOf="@id/soundSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_marginRight="-8dp"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vibrateSwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundSwitch"
        android:text="@string/vibrate_on_collision"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <include layout="@layout/layout_list_separator"
        app:layout_constraintTop_toBottomOf="@id/vibrateSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_marginRight="-8dp"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/callSwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibrateSwitch"
        android:text="@string/call_emergency_contacts"
        android:checked="false"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <include layout="@layout/layout_list_separator"
    app:layout_constraintTop_toBottomOf="@id/callSwitch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="-8dp"
    android:layout_marginRight="-8dp"/>

    <TextView
        android:id="@+id/countDownTimeSeekBarSettingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_down_time"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/callSwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/countDownTimeSeekBarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/countDownTimeSeekBarSettingLabel"
        app:layout_constraintTop_toBottomOf="@id/callSwitch"
        android:layout_marginTop="8dp"/>

    <SeekBar
        android:id="@+id/countDownTimeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countDownTimeSeekBarSettingLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:progress="15"/>

    <include layout="@layout/layout_list_separator"
        app:layout_constraintTop_toBottomOf="@id/countDownTimeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_marginRight="-8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>